fix red status blob text overflow

--- a/apps/src/templates/rubrics/rubrics.module.scss
+++ b/apps/src/templates/rubrics/rubrics.module.scss
@@ -1294,7 +1294,7 @@ p.detailsHidden {
   border-radius: 20px;
   padding: 4px 10px 0;
   height: 22px;
-  min-width: 80px;
+  min-width: 115px;
   display: inline;
   margin-right: 17px;
   p {
@@ -1321,7 +1321,6 @@ p.detailsHidden {
   p {
     margin-bottom: 0;
   }
-  max-width: 120px;
   overflow: hidden;
   height: 20px;
   text-overflow: ellipsis;
